fix portfolio alignment, deco nav, fixed fix footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,22 +28,31 @@ h1 {
 }
 
 nav {
-	padding: 25px 0px;
-	word-spacing: 15px;
+	padding: 30px 0px;
 	float: right;
 }
 
-a:link {
+a.navi:link {
 	text-decoration-line: none;
 }
 
+a.navi:hover {
+	background-color: #4aaaa5;
+	color: #ffffff;
+}
+
+a.navi {
+	text-align: center;
+	padding: 30px 20px;
+	margin-left: 5px;
+}
+
 #divider {
-	border-left: 1px solid #cccccc;
-	padding: 0px 5px;
+	border: 1px solid #cccccc;
 	display: inline;
 }
 
-/*content style*/
+/*Content style*/
 .contentContainer {
 	clear: both;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -51,8 +60,10 @@ a:link {
 	width: 960px;
 	margin: auto;
 	margin-top: 25px;
+	margin-bottom: 100px;
 	border: 1px solid #cccccc;
 	color: #777777;
+	position: relative;
 }
 
 h2 {
@@ -82,31 +93,23 @@ p {
 
 /*Portfolio Links*/
 #text-block {
-	width: 200px;
+	width: 240px;
 	padding: 30px;
 	background: #4aaaa5;
 	color: #ffffff;
 	font-size: 20px;
-	margin: auto;
-	position: relative;
+	margin: -110px 25px;
+	float: left;
+	position: absolute;
 	text-align: center;
 }
 
-/*div[name=port1] {
-	background-image: url(../../assets/images/port_1.jpg);
-	background-repeat: no-repeat;
-	height: 250px;
-	width: 300px;
-	margin: 25px;
-}*/
-
-#image img{
+#image img {
 	height: 250px;
 	width: 300px;
 	margin: 20px 25px;
-}
+	background-color: none;
 
-#text-block {
 }
 
 /*Contact message style*/
